--- a/workshops/index.html
+++ b/workshops/index.html
@@ -16,7 +16,7 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
         <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="../classes/">Classes</a></li>
         <li><a href="../legacy/">Legacy</a></li>
@@ -48,7 +48,7 @@
 
       <p>Contact: Alex Dong <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
 
-      <p><a href="http://www.alexdongtaichi.com/westwater2015/Westwater2015.docx" target="_blank">Download a booking form</a></p>
+      <p><a href="http://alexdongtaichi.com/westwater2015/Westwater2015.docx" target="_blank">Download a booking form</a></p>
       </div>
 
       <a href="#euro2015-popup" class="animated_popup"><h1>European Tour 2015</h1></a>
@@ -77,7 +77,7 @@
       <br>Costs €410 for double occupancy and €500 for single (only if available). Inclusive except for one lunch and two dinners. Pay directly to Lagavina B and B.
       <br>€90 fee for the tours, pick-ups and drop-offs. Pay to Claudio.
       <br>€280 tuition ($350). Pay to Alex Dong.
-      <p>Download Booking Form in <a href="http://www.alexdongtaichi.com/europe2015/European_Tour_2015.docx" target="_blank">MS Word</a> or <a href="http://www.alexdongtaichi.com/europe2015/European_Tour_2015.pdf" target="_blank">PDF</a> format. Prices above are in US dollars or Euros.</p>
+      <p>Download Booking Form in <a href="http://alexdongtaichi.com/europe2015/European_Tour_2015.docx" target="_blank">MS Word</a> or <a href="http://alexdongtaichi.com/europe2015/European_Tour_2015.pdf" target="_blank">PDF</a> format. Prices above are in US dollars or Euros.</p>
 
       <p>Send to Alex Dong, Alex Dong Tai Ji, 69-11 Yellowstone Blvd. Apt. Forest Hills, New York, NY 11375, USA with payment</p>
 
@@ -92,7 +92,7 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
         <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="../classes/">Classes</a></li>
         <li><a href="../legacy/">Legacy</a></li>
