--- a/classes/longisland/index.html
+++ b/classes/longisland/index.html
@@ -16,8 +16,8 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
         <li><a class="workshop-highlight" href="../../workshops/">Workshops</a></li>
@@ -62,8 +62,8 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
         <li><a href="../../workshops/">Workshops</a></li>
