--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header-homepage">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
         <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="classes/">Classes</a></li>
         <li><a href="legacy/">Legacy</a></li>
@@ -85,7 +85,7 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
         <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="classes/">Classes</a></li>
         <li><a href="legacy/">Legacy</a></li>
