--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -17,7 +17,7 @@
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
         <li><a href="http://alexdongtaichi.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
+        <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
         <li><a class="workshop-highlight" href="../../workshops/">Workshops</a></li>
@@ -72,7 +72,7 @@
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
         <li><a href="http://alexdongtaichi.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
+        <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
         <li><a href="../../classes/">Classes</a></li>
         <li><a href="../../legacy/">Legacy</a></li>
         <li><a href="../../workshops/">Workshops</a></li>
