added greece workshop, fixed booking form issues

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -36,56 +36,117 @@
       <a href="#westwater-popup" class="animated_popup"><h1>Westwater</h1></a>
       <h2>April 24th 2015 - May 2nd 2015</h2>
       <div id="westwater-popup" style="display:none" class="image-popup" class="book-details-popup">
-      <h3>Westwater Intensive Training 2015</h3>
+        <h3>Westwater Intensive Training 2015</h3>
 
-      <p>Friday April 24th to Saturday May 2nd 2015</p>
+        <p>Friday April 24th to Saturday May 2nd 2015</p>
 
-      <p>Highlights will be to reteach the Fajin form and work on Fajin energy, Push Hands and weapons. More details to follow.</p>
+        <p>Highlights will be to reteach the Fajin form and work on Fajin energy, Push Hands and weapons. More details to follow.</p>
 
-      <p>West Water camp is located on the beautiful high desert of the Utah - Colorado border, forty five minutes from the Grand Junction, Colorado Walker Field airport and five hours from Denver and Salt Lake City. It's warm during the day and cool at night. At 5000 feet in elevation, the stars and moon are more beautiful and bright. Miles away from civilization, for nearly a decade students from around the world have found the solitude, and nature of the area, a powerful adjunct to their study of Taj Ji.</p>
+        <p>West Water camp is located on the beautiful high desert of the Utah - Colorado border, forty five minutes from the Grand Junction, Colorado Walker Field airport and five hours from Denver and Salt Lake City. It's warm during the day and cool at night. At 5000 feet in elevation, the stars and moon are more beautiful and bright. Miles away from civilization, for nearly a decade students from around the world have found the solitude, and nature of the area, a powerful adjunct to their study of Taj Ji.</p>
 
-      <p>This camp has no indoor sleeping arrangements; everyone has to bring their own tent and bedding for camping, and personal things like towel, soap, shampoo, sun block, hat and flip flops. Keep in mind late night temperature could drop down to freezing. Meals, showers, washing machine and two flushing toilets along with dining and training halls are provided.</p>
+        <p>This camp has no indoor sleeping arrangements; everyone has to bring their own tent and bedding for camping, and personal things like towel, soap, shampoo, sun block, hat and flip flops. Keep in mind late night temperature could drop down to freezing. Meals, showers, washing machine and two flushing toilets along with dining and training halls are provided.</p>
 
-      <p>Contact: Alex Dong <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
+        <p>Contact: Alex Dong <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
 
-      <p><a href="http://alexdongtaichi.com/westwater2015/Westwater2015.docx" target="_blank">Download a booking form</a></p>
+        <p><a href="Westwater2015.docx" target="_blank">Download a booking form</a></p>
       </div>
 
       <a href="#euro2015-popup" class="animated_popup"><h1>European Tour 2015</h1></a>
       <h2>June 20th 2015 - July 3rd 2015</h2>
 
       <div id="euro2015-popup" style="display:none" class="image-popup" class="book-details-popup">
-      <h3>European Tour 2015</h3>
+        <h3>European Tour 2015</h3>
 
-      <p>Saturday June 20th to Friday July 3nd 2015</p>
+        <p>Saturday June 20th to Friday July 3nd 2015</p>
 
-      <p>This tour will be limited to 20 people. Plus some locals. Please register ASAP. Some may have to share a double bed to maximize the number and keep the costs down. Due to limited space, all participants must attend/pay all classes.</p>
+        <p>This tour will be limited to 20 people. Plus some locals. Please register ASAP. Some may have to share a double bed to maximize the number and keep the costs down. Due to limited space, all participants must attend/pay all classes.</p>
 
-      <p>Majorca, Spain
-      <br>June 20th --- Check-in in the afternoon and Dinner
-      <br>June 21st --- AM and PM class
-      <br>June 22nd to 25th --- Free time during the day. Class in the evening.
-      <br>June 26th --- Travel to Siena
-      <br>Costs $520 for double occupancy room and Instruction. Plus €160 for food pay to Armand upon <br>arrival.
-      <br>Does not include lunches and transportation. Our plan is to group students into 3 to 4 and share a car rental. This way, people will have more flexibility to what they want to do during the day.
-      <br>Siena, Italy
-      <br>June 26th --- Check in and Dinner
-      <br>June 27th to 29th --- AM and PM classes
-      <br>June 30th --- Tour Tuscany
-      <br>July 1st and 2nd --- Morning class and visit Siena and The Palio in the afternoon
-      <br>July 3rd --- End of Tour
-      <br>Costs €410 for double occupancy and €500 for single (only if available). Inclusive except for one lunch and two dinners. Pay directly to Lagavina B and B.
-      <br>€90 fee for the tours, pick-ups and drop-offs. Pay to Claudio.
-      <br>€280 tuition ($350). Pay to Alex Dong.
-      <p>Download Booking Form in <a href="http://alexdongtaichi.com/europe2015/European_Tour_2015.docx" target="_blank">MS Word</a> or <a href="http://alexdongtaichi.com/europe2015/European_Tour_2015.pdf" target="_blank">PDF</a> format. Prices above are in US dollars or Euros.</p>
+        <p>Majorca, Spain
+        <br>June 20th --- Check-in in the afternoon and Dinner
+        <br>June 21st --- AM and PM class
+        <br>June 22nd to 25th --- Free time during the day. Class in the evening.
+        <br>June 26th --- Travel to Siena
+        <br>Costs $520 for double occupancy room and Instruction. Plus €160 for food pay to Armand upon <br>arrival.
+        <br>Does not include lunches and transportation. Our plan is to group students into 3 to 4 and share a car rental. This way, people will have more flexibility to what they want to do during the day.
+        <br>Siena, Italy
+        <br>June 26th --- Check in and Dinner
+        <br>June 27th to 29th --- AM and PM classes
+        <br>June 30th --- Tour Tuscany
+        <br>July 1st and 2nd --- Morning class and visit Siena and The Palio in the afternoon
+        <br>July 3rd --- End of Tour
+        <br>Costs €410 for double occupancy and €500 for single (only if available). Inclusive except for one lunch and two dinners. Pay directly to Lagavina B and B.
+        <br>€90 fee for the tours, pick-ups and drop-offs. Pay to Claudio.
+        <br>€280 tuition ($350). Pay to Alex Dong.
+        <p>Download Booking Form in <a href="European_Tour_2015.docx" target="_blank">MS Word</a> or <a href="European_Tour_2015.pdf" target="_blank">PDF</a> format. Prices above are in US dollars or Euros.</p>
 
-      <p>Send to Alex Dong, Alex Dong Tai Ji, 69-11 Yellowstone Blvd. Apt. Forest Hills, New York, NY 11375, USA with payment</p>
+        <p>Send to Alex Dong, Alex Dong Tai Ji, 69-11 Yellowstone Blvd. Apt. Forest Hills, New York, NY 11375, USA with payment</p>
 
-      <p>Booking and information: please email: <a href="alexdongtaichi@gmail.com">alexdongtaichi@gmail.com</a></p>
+        <p>Booking and information: please email: <a href="alexdongtaichi@gmail.com">alexdongtaichi@gmail.com</a></p>
       </div>
 
-      <a href="#"><h1>Greece</h1></a>
+      <a href="#greece2015-popup" class="animated_popup"><h1>Greece</h1></a>
       <h2>September 28th 2015 - October 4th 2015</h2>
+
+      <div id="greece2015-popup" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Greece</h3>
+
+        <p>WORKSHOP ON FORMS AND PUSH HANDS WITH MASTER ALEX DONG IN ATHENS-GREECE Monday 28 September to Sunday 4 October 2015</p>
+
+        <img src="greece1.jpg">
+
+        <p><strong>ATHENS CLASSES 28/9 – 30/9</strong>
+        <br>Monday 28/9, 19:00-21:30 slow set 35€
+        <br>Tuesday 29/9, 19:00-21:00 Family fast set 30€
+        <br>Wednesday 30/9, 19:00-21:30 slow set 35€
+        <br>Possible morning class, fajin set (please let us know if you would like to join)
+        <br>
+        <br>The venue will be announced closer at the date of the workshop and will be in the city of Athens.</p>
+
+        <p><strong>PUSH HANDS WORKSHOP with Master Alex Dong</strong>
+
+        <br>Thursday 1st to Sunday 4th of October 2015
+        <br>A four day special push hands workshop in a venue one hour away from Athens
+        <br>Workshop will start on Thursday at 17:30 and will end on Sunday at 19:00</p>
+        <p><br><strong>TIMETABLE OF CLASSES:</strong>
+        <br>Thursday 1/10, 17:30-20:00
+        <br>Friday 2/10, 10:30-13:00 & 17:00-19:30
+        <br>Saturday 3/10, 10:30-13:00 & 17:00-19:30
+        <br>Sunday 4/10, 10:30-13:00 & 16:30-19:00</p>
+
+        <p>Students need to attend all classes</p>
+        <p><strong>Cost of the workshop (lessons only):</strong> 300 US dollars
+
+        <br><strong>Cost of accommodation:</strong> 105€ (includes 3 nights, starting from Thursday evening – Sunday lunch, based on twin or triple sharing rooms and full board). Our workshop covers all meals – vegetarian and non vegetarian. A booking form will be send to you, once you request to join the workshop, in order to let us know your special needs
+
+        <br><strong>Single accommodation (spaces limited):</strong> 125€</p>
+
+        <p>(There is possibility of staying an extra night on Sunday if your flight is on Monday with an extra cost of 15€ -not including Sunday dinner and Monday breakfast (that can be arranged). International airport is approx. 15 drive from the venue.</p>
+
+        <p><strong>VENUE DETAILS FOR THE PUSH HANDS WORKSHOP</strong></p>
+
+        <p>The venue is called Ktima Maliveni and is a place designed especially for workshops situated outside of town on the hills. It is also an organic farm very close to Athens International Airport (15 minutes drive) near Markopoulo.</p>
+
+        <img src="greece2.jpg">
+
+        <p><strong>Rooms:</strong> Rooms have their own bathroom and can host comfortably up to 3 people with upper and lower space. There is also a space with 10 beds and shared bathrooms (this deducts 12€ from the total cost).</p>
+
+        <img src="greece3.jpg">
+
+        <p><strong>Practice Places: </strong>There is an outdoor shaded space for practice as well a big hall in case of bad weather.</p>
+
+        <img src="greece4.jpg">
+
+        <p><strong>Transportation:</strong> You can arrange you own taxi transportation from and to the airport, individually or for small group of people (3-4) who arrive approx the same time. Special details of how to find the place and taxi costs will be given once you book for the workshop.</p>
+
+        <p><strong>Getaway:</strong> There is a small town by the sea - Porto Rafti - approx. 10 minutes drive from the venue. Several beaches are nearby if you want to swim. For those who like to try local food there are several fish restaurants.</p>
+
+        <img src="greece5.jpg">
+
+        <p>Contact Lydia at <a href="mailto:lydiatilli@hotmail.com">lydiatilli@hotmail.com</a> or Yiannis at <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a> with any questions. The booking form can downloaded here: either <a href="greece2015.doc">Word Document</a> or a <a href="greece2015.pdf">PDF</a></p>
+
+        <p>We will be glad to see you again in Greece and be your host!</p>
+      </div>
+
     </div>
   </section>
 
