--- a/classes/index.html
+++ b/classes/index.html
@@ -75,7 +75,7 @@
         <li><a href="zagreb">Zagreb, Croatia</a></li>
         <li><a href="prague">Prague, Czech Republic</a></li>
         <li><a href="london">London, England</a></li>
-        <li><a href="grenoble">Grenoble, France</a></li>
+        <li><a href="grenobble">Grenoble, France</a></li>
         <li><a href="athens">Athens, Greece</a></li>
         <li><a href="siena">Siena, Italy</a></li>
       </ul>
