--- a/classes/grenobble/index.html
+++ b/classes/grenobble/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <div class="header-background">
-    <h1>Grenobble, France</h1>
+    <h1>Grenoble, France</h1>
   </div>
 
   <section class="history-classes">
