--- a/classes/carmelvalley/index.html
+++ b/classes/carmelvalley/index.html
@@ -54,8 +54,8 @@
         <p>Carmel Valley Athletic Club
         <br>Tuesdays and Thursdays: 5:00-6:00 pm
         <br>Advanced/Intermediate
-        <br>Wednesdays: 4:30-5:30 pm</p>
-        <p>Email: <a href="mailto:temasuda@hotmail.com">temasuda@hotmail.com</a></p>
+        <br>Wednesdays: 4:30-5:30 pm
+        <br>Email: <a href="mailto:temasuda@hotmail.com">temasuda@hotmail.com</a></p>
     </div>
 
   </section>
