fixed yiannis website link, added belo instructor, removed idaho, removed queens class, rmeoved prague teacher

--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -63,7 +63,7 @@
       <p>Athens Tai Chi Chuan Association
       <br>Address: Neo Iraklio - Selinis 23 - Athens
       <br>Phone: 00302107648126 or Email: <a href="mailto:taichiathens@gmail.com">taichiathens@gmail.com</a>
-      <br>Website: <a href="www.taichiathens.gr" target="_blank">www.taichiathens.gr</a></p>
+      <br>Website: <a href="http://www.taichiathens.gr" target="_blank">www.taichiathens.gr</a></p>
     </div>
 
   </section>
