--- a/classes/belohorizonte/index.html
+++ b/classes/belohorizonte/index.html
@@ -32,6 +32,10 @@
 
   <section class="history-classes">
     <div class="history-container classes-container">
+      <h1>Instructor: Luciana Maia de Menezes</h1></a>
+      <p><a href="http://www.taichichuanbhmg.com.br/"></a>Tai Chi Chaun BH/MG</p>
+    </div>
+    <div class="history-container classes-container">
       <a href="#tonidemoulin-popup" class="animated_popup"><h1>Instructor: Sandra Arruda</h1></a>
         <div id="tonidemoulin-popup" class="image-popup" style="display:none">
           <img src="../../assets/images/instructor/sandraarruda.jpg">
