added gordon and duncan elliot profile

--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -1,4 +1,4 @@
-s<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 
 <html>
 
@@ -34,18 +34,33 @@ s<!DOCTYPE HTML>
     <div class="history-container classes-container">
     <p>Classes in Yang style tai chi chuan (taijiquan) are held in several locations in London. Beginners always welcome; no previous experience necessary. Intermediate classes require suitable experience.</p>
     <p>Your first class will be a gentle introduction to the tai chi movements, including a standard set of exercises to warm up the body and relax the mind ready for the class. We suggest that you wear soft shoes and loose clothing; something like a track suit and trainers. Most classes do not require you to book in advance and classes can be joined at any time.</p>
-    <h1 class="london-title">Instructor: Gordon Joly</h1>
-    <p>Wednesday Beginners 18:00 to 19:00
-    <br><a href="http://www.openstreetmap.org/#map=19/51.51361/-0.00963" target="_blank">The Brownfield Cabin, St. Leonard's Steet, London E14</a> Cost £2.00. No class on 6th May 2015</p>
-    <p>Thursday Beginners 18:30 to 20:00
-    <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?E3+3HJ" target="_blank">Kingsley Hall Powis Road, London E3 3HJ.</a> Cost £7.00 DLR: Bow Church, Tube: Bromley by Bow or Bow Road</p>
-    <p>Saturday Beginners 10:00 to 11:00
-    <br><a href="http://www.openstreetmap.org/?lat=51.521108&lon=-0.021252&zoom=18&layers=M" target="_blank">The Linc Centre, 70 Fern Street, London E3 3PR</a> Cost £2.00 (six classes for £10.00) No class on 9th May 2015</p>
-    <p>Phone: 020 7515 496 or Email: <a href="mailto:gordon.joly@pobox.com">gordon.joly@pobox.com</a>
-    <h1 class="london-title">Instructor: Duncan Elliott</h1>
+    <div class="history-container classes-container instructor-container">
+      <a href="#gordonjoly-popup" class="animated_popup"><h1>Instructor: Gordon Joly</h1></a>
+        <div id="gordonjoly-popup" class="image-popup" style="display:none">
+          <h3>Gordon Joly</h3>
+          <img src="../../assets/images/instructor/gordonjoly.jpg">
+          <p>Gordon Joly began his tai chi journey in 1990 and has been teaching since 1997. Since then he has taught at the BBC Club (at BBC Television Centre) and Madame Tussauds in London (UK) and at many classes around London. He has held weekend workshops in the UK and Canada. His interest in tai chi started from a training in dance and some exploration of yoga. He likes the special type of meditation brought through practice of the tai chi Slow Set.</p>
+
+          <p>Gordon first met Master Alex Dong in the early 1990s and has followed the family style ever since. He sees the art as being accessible to all, and hence this allows both the energetic youngster, and the more careful older student to follow and gain benefit. He is interested in writing about tai chi, from all perspectives; he sees a relationship between some parts of mathematics and tai chi as well as between music and tai chi.</p>
+        </div>
+      <p>Wednesday Beginners 18:00 to 19:00
+      <br><a href="http://www.openstreetmap.org/#map=19/51.51361/-0.00963" target="_blank">The Brownfield Cabin, St. Leonard's Steet, London E14</a> Cost £2.00. No class on 6th May 2015</p>
+      <p>Thursday Beginners 18:30 to 20:00
+      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?E3+3HJ" target="_blank">Kingsley Hall Powis Road, London E3 3HJ.</a> Cost £7.00 DLR: Bow Church, Tube: Bromley by Bow or Bow Road</p>
+      <p>Saturday Beginners 10:00 to 11:00
+      <br><a href="http://www.openstreetmap.org/?lat=51.521108&lon=-0.021252&zoom=18&layers=M" target="_blank">The Linc Centre, 70 Fern Street, London E3 3PR</a> Cost £2.00 (six classes for £10.00) No class on 9th May 2015</p>
+      <p>Phone: 020 7515 4964 or Email: <a href="mailto:gordon.joly@pobox.com">gordon.joly@pobox.com</a>
+    </div>
+        <div class="history-container classes-container instructor-container">
+    <a href="#duncanelliot-popup" class="animated_popup"><h1>Instructor: Duncan Elliot</h1></a>
+    <div id="duncanelliot-popup" class="image-popup" style="display:none">
+      <h3>Duncan Elliot</h3>
+      <img src="../../assets/images/instructor/duncanelliot.jpg">
+      <p>I started tai chi in Earls Court in 2004, whilst at the gym. I was looking for alternatives to weight training that would be good for health and also to relax after my driving job. I tried the class there with Nancy Lam, she was very kind and patient with new members. I found the class very relaxing and calming and never looked back. I have on occasions gone to other classes with Gordon Joly and Arthur Martin when work permits and attended seminars with Master Alex Dong. Sadly after Nancy passed away in 2012, the Earls court class members decided to continue with me as the leader as Nancy's most regular and longest serving student at Earls Court.</p>
+    </div>
     <p>Monday Beginners (all levels) 2:00pm to 3:30pm
     <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?SW5+0BS" target="_blank">Brompton Library, 210 Old Brompton Road, Earls Court, London SW5 0BS.</a> Cost £10.00</p>
-    <p>Phone: 07531 095217 or Email: <a href="mailto:duncanelliott@yahoo.co.uk">duncanelliott@yahoo.co.uk</a></p>
+    <p>Phone: 075 3109 5217 or Email: <a href="mailto:duncanelliott@yahoo.co.uk">duncanelliott@yahoo.co.uk</a></p>
     <h1 class="london-title">Instructor: Arthur Martin</h1>
     <p>Thursday Beginners 11:00 to 12:20
     <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?NW1+7JY" target="_blank">Soho Gyms, 193, Camden High Street, London NW1 7JY.</a> Phone: 020 7482 4524. Cost £10.00</p>
