fixed link in belo horizonte

--- a/classes/belohorizonte/index.html
+++ b/classes/belohorizonte/index.html
@@ -33,7 +33,7 @@
   <section class="history-classes">
     <div class="history-container classes-container">
       <h1>Instructor: Luciana Maia de Menezes</h1></a>
-      <p><a href="http://www.taichichuanbhmg.com.br/"></a>Tai Chi Chaun BH/MG</p>
+      <p><a href="http://www.taichichuanbhmg.com.br/">Tai Chi Chaun BH/MG</a></p>
     </div>
 
     <div class="history-container classes-container instructor-container">
