--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -41,13 +41,7 @@
 
           <p>Gordon first met Master Alex Dong in the early 1990s and has followed the family style ever since. He sees the art as being accessible to all, and hence this allows both the energetic youngster, and the more careful older student to follow and gain benefit. He is interested in writing about tai chi, from all perspectives; he sees a relationship between some parts of mathematics and tai chi as well as between music and tai chi.</p>
         </div>
-      <p>Wednesday Beginners 18:00 to 19:00
-      <br><a href="http://www.openstreetmap.org/#map=19/51.51361/-0.00963" target="_blank">The Brownfield Cabin, St. Leonard's Steet, London E14</a> Cost £2.00. No class on 6th May 2015</p>
-      <p>Thursday Beginners 18:30 to 20:00
-      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?E3+3HJ" target="_blank">Kingsley Hall Powis Road, London E3 3HJ.</a> Cost £7.00 DLR: Bow Church, Tube: Bromley by Bow or Bow Road</p>
-      <p>Saturday Beginners 10:00 to 11:00
-      <br><a href="http://www.openstreetmap.org/?lat=51.521108&lon=-0.021252&zoom=18&layers=M" target="_blank">The Linc Centre, 70 Fern Street, London E3 3PR</a> Cost £2.00 (six classes for £10.00) No class on 9th May 2015</p>
-      <p>Phone: 020 7515 4964 or Email: <a href="mailto:gordon.joly@pobox.com">gordon.joly@pobox.com</a>
+      <p>Class schedule - <a href="http://www.taichispirit.org.uk/">Tai Chi Spirit</a></p>
     </div>
         <div class="history-container classes-container instructor-container">
     <a href="#duncanelliot-popup" class="animated_popup"><h1>Instructor: Duncan Elliot</h1></a>
