added spain, denmark, removed david koos

--- a/classes/index.html
+++ b/classes/index.html
@@ -73,10 +73,12 @@
         <li><a href="belohorizonte">Belo Horizonte, Brazil</a></li>
         <li><a href="zagreb">Zagreb, Croatia</a></li>
         <li><a href="prague">Prague, Czech Republic</a></li>
+        <li><a href="vejle">Vejle, Denmark</a></li>
         <li><a href="london">London, England</a></li>
         <li><a href="grenoble">Grenoble, France</a></li>
         <li><a href="athens">Athens, Greece</a></li>
         <li><a href="siena">Siena, Italy</a></li>
+        <li><a href="majorca">Majorca, Spain</a></li>
       </ul>
     </div>
    </section>
