--- a/classes/vejle/index.html
+++ b/classes/vejle/index.html
@@ -27,41 +27,12 @@
   </header>
 
   <div class="header-background">
-    <h1>Colorado & Utah Borders</h1>
+    <h1>Vejle, Denmark</h1>
   </div>
 
   <section class="history-classes">
-    <div class="history-container classes-container">
-      <a href="#davidcabin-popup" class="animated_popup"><h1>Instructor: David Cabin</h1></a>
-        <div id="davidcabin-popup" class="image-popup" style="display:none">
-          <h3>David Cabin</h3>
-          <p>David has been a student of Master Dong's since 1998 and has been teaching Dong Family Yang Style Taiji since 2003. He teaches classes in Vail, Edwards, and Eagle Colorado.</p>
-        </div>
-      <p>Tuesdays and Thursdays from 6:00 pm to 7:30 pm.
-      <br>Colorado Mountain College in Vail, Colorado (also in Vail and Eagle Colorado)
-      <br>Phone: 970-914-5027 or Email: <a href="mailto:dsc@techdancers.net">dsc@techdancers.net</a>
-    </div>
-
-    <div class="history-container classes-container instructor-container">
-      <a href="#donmorehouse-popup" class="animated_popup"><h1>Instructor: Don Morehouse</h1></a>
-        <div id="donmorehouse-popup" class="image-popup" style="display:none">
-          <h3>Don Morehouse</h3>
-          <p>I was first introduced to Yang Style Tai Chi while living in Fairbanks Alaska. I was looking for relief from a low back injury and found the stretching movements of the slow set very therapeutic. I studied with the Taoist Tai Chi group for eight years and taught beginner classes for two years. After moving back to Colorado I continued to practice the slow set but really missed working out with a good instructor and a group. I met David Koos and he led me to Roger Skiles who was teaching Dong Family style and frequently attending workshops led by Alex. I began attending the West Water camp and have been a regular there since 2001. Alex's teaching reinforced by Roger has opened an ever expanding world of Tai Chi for me. I am pursuing several forms including Slow Set , Family Set, Hao, and Sword. I currently teach a Slow Set class one night a week.</p>
-        </div>
-      <p>Location: Grand Junction, Colorado
-      <br>Phone: 970-248-5934</p>
-    </div>
-
-    <div class="history-container classes-container instructor-container">
-      <a href="#rogerskiles-popup" class="animated_popup"><h1>Instructor: Roger Skiles</h1></a>
-        <div id="rogerskiles-popup" class="image-popup" style="display:none">
-          <img src="../../assets/images/instructor/rogerskiles.jpg">
-          <h3>Roger Skiles</h3>
-          <p>Roger hosts an annual training camp each April for Alex and his students at Westwater, Utah. This unique camp, located in an unpopulated area of the famed Colorado River Canyon Country, has excellent energy for training and has become a favorite to students around the world.</p>
-        </div>
-      <p>Location: Westwater, Utah
-      <br>Phone: 970-260-9756</p>
-    </div>
+    <div class="history-container classes-container link-container">
+      <h1>Please visit <a href="http://taijisvenner.dk/" target="_blank">http://taijisvenner.dk</a></h1>
 
   </section>
 
