--- a/workshops/index.html
+++ b/workshops/index.html
@@ -31,7 +31,7 @@
     <h3>Upcoming Intense And Focused Training Around The World</h3>
   </div>
 
-  <section class="history workshops">
+  <section class="history workshops link-container">
     <div class="history-container">
       <a href="#westwater-popup" class="animated_popup"><h1>Westwater</h1></a>
       <h2>April 24th 2015 - May 2nd 2015</h2>
