made link open a new tab, make sure to add target=_blank for links

--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -41,7 +41,7 @@
 
           <p>Gordon first met Master Alex Dong in the early 1990s and has followed the family style ever since. He sees the art as being accessible to all, and hence this allows both the energetic youngster, and the more careful older student to follow and gain benefit. He is interested in writing about tai chi, from all perspectives; he sees a relationship between some parts of mathematics and tai chi as well as between music and tai chi.</p>
         </div>
-      <p>Class schedule - <a href="http://www.taichispirit.org.uk/">Tai Chi Spirit</a></p>
+      <p>Class schedule - <a href="http://www.taichispirit.org.uk/" target="_blank">Tai Chi Spirit</a></p>
     </div>
         <div class="history-container classes-container instructor-container">
     <a href="#duncanelliot-popup" class="animated_popup"><h1>Instructor: Duncan Elliot</h1></a>
