--- a/workshops/index.html
+++ b/workshops/index.html
@@ -63,7 +63,7 @@ The North America Push Hands Workshop with Master Alex Dong </h2>
 <h3>June 5th - June 8th 2015</h3>
 
 
-<img src="http://www.taichispirit.org.uk/images/ny2015.jpg" width="240">
+<img src="http://www.taichispirit.org.uk/images/ny2015.jpg" width="240"></img>
 
 <h3>Workshop Options</h3>
 <p>
@@ -74,36 +74,20 @@ The North America Push Hands Workshop with Master Alex Dong </h2>
 + Sat and Sun-$400 6 classes, with meals and one night lodging</p>
 <p>
 + One Day-$200 3 classes, 2 meals</p>
-</td>
+
 <h2>Training Includes</h2>
 
-<p>
+<ul><li>
 Building strong structure
-</p>
-<p>
-Develop better rooting
-</p>
-<p>
-Internal Energy
-</p>
-<p>
-Be strong by being relax
-</p>
-<p>
-
-Drills and applications
-</p>
-<p>
-Fajin Energy
-</p>
-<p>
-Push with other Enthusiasts 
-</p>
-
-
-Deeper understanding of Taiji principles
-</p>
-<ul>
+</li>
+<li>Develop better rooting</li>
+<li>Internal Energy</li>
+<li>Be strong by being relax</li>
+<li>Drills and applications</li>
+<li>Fajin Energy</li>
+<li>Push with other Enthusiasts</li>
+<li>Deeper understanding of Taiji principles</li>
+<hr/>
 <li>There will be socializing in the</li>
 <li>evenings and free Push Hands
 <li>Bonfire Saturday</li>
@@ -114,7 +98,7 @@ Deeper understanding of Taiji principles
 <h1>Workshop Location</h1>
 <h2>The Ashokan Center</h2>
 
-<a href="http://ashokancenter.org/">Ashokancenter.org</a>
+<a href="http://ashokancenter.org/"  target="_blank">Ashokancenter.org</a>
 
 <p>
 Address: Ashokan Center,  477 Beaverkill Rd.  Olivebridge, NY 12461
