--- a/workshops/index.html
+++ b/workshops/index.html
@@ -87,7 +87,7 @@ Building strong structure
 <li>Fajin Energy</li>
 <li>Push with other Enthusiasts</li>
 <li>Deeper understanding of Taiji principles</li>
-<hr/>
+<li>&nbsp;</li>
 <li>There will be socializing in the</li>
 <li>evenings and free Push Hands
 <li>Bonfire Saturday</li>
