--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="assets/css/css.css">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta charset="UTF-8">
+    <meta name="keywords" content="tai chi, tai ji, taiji, Alex Dong, Dong Da De, NYC, nyc, new york">
+    <meta name="keywords" content="demnark, spain, italy, uk, greece, brazil">
     <title>Alex Dong Taiji</title>
   </head>
 
