--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
 <h2>Fourth Generation Taichi Chuan Master</h2>
 
 <p>
-You have reached this page in error. Please report to the <a href="mailto:webmaster@alexdongtaichi.com">Webmaster</a></p>
+You have reached this page in error. Please report to the <a href="mailto:webmaster@alexdongtaichi.com"><color="ffffff">Webmaster</a></p>
 
 </body>
 </html>
