--- a/404.html
+++ b/404.html
@@ -1,32 +1,37 @@
 <!DOCTYPE HTML>
-<html>
-<head>
-<link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="assets/css/css.css">
-<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-<meta charset="UTF-8">
-<meta name="keywords" content="tai chi, tai ji, taiji, Alex Dong, Dong Da De, NYC, nyc, new york">
-<meta name="keywords" content="demnark, spain, italy, uk, greece, brazil">
-<title>Alex Dong Taiji</title>
-</head>
-<body>
-<header class="header-homepage">
-<nav class="nav-homepage">
-<ul class="nav-ul-homepage">
-<li><a href="http://alexdongtaichi.com">Home</a></a></li>
-<li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
-<li><a href="classes/">Classes</a></li>
-<li><a href="legacy/">Legacy</a></li>
-<li><a class="workshop-highlight" href="workshops/">Workshops</a></li>
-<li><a class="store-button" href="store/">Store</a></li>
-</ul>
-</nav>
 
-<h1>Master Alex Dong</h1>
-<h2>Fourth Generation Taichi Chuan Master</h2>
+<html>
+
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../assets/css/css.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Alex Dong Taiji</title>
+  </head>
+
+<body>
+
+  <header class="header-classes">
+    <nav class="nav-homepage">
+      <ul class="nav-ul-homepage">
+        <li><a href="http://alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
+        <li><a href="../classes/">Classes</a></li>
+        <li><a href="../legacy/">Legacy</a></li>
+        <li><a class="workshop-highlight" href="../workshops/">Workshops</a></li>
+        <li><a class="store-button" href="../store/">Store</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="header-background">
+    <h1>Error Page</h1>
+  
+  </div>
 
 <p>
-You have reached this page in error. Please report to the <a href="mailto:webmaster@alexdongtaichi.com"><blink>Webmaster</blink></a></p>
+You have reached this page in error. Please report to the <a href="mailto:webmaster@alexdongtaichi.com">Webmaster</a></p>
 
 </body>
 </html>
