--- a/404.html
+++ b/404.html
@@ -30,8 +30,14 @@
   
   </div>
 
-<p>
-You have reached this page in error. Please report to the <a href="mailto:webmaster@alexdongtaichi.com">Webmaster</a></p>
+<ul>
+<li>&nbsp;</li>
+<li>&nbsp;</li>
+<li>&nbsp;</li>
+
+<li>You have reached this page in error.</li>
+<li> Please report to the <a href="mailto:webmaster@alexdongtaichi.com">Webmaster</a></li>
+</ul>
 
 </body>
 </html>
