--- a/404.html
+++ b/404.html
@@ -36,6 +36,10 @@
 <li>&nbsp;</li>
 
 <li>You have reached this page in error.</li>
+
+<li>&nbsp;</li>
+<li>&nbsp;</li>
+
 <li> Please report to the <a href="mailto:webmaster@alexdongtaichi.com">Webmaster</a></li>
 </ul>
 
