--- a/404.html
+++ b/404.html
@@ -17,8 +17,8 @@
       <ul class="nav-ul-homepage">
         <li><a href="http://alexdongtaichi.com">Home</a></a></li>
         <li><a target="_blank" href="http://blog.alexdongtaichi.com">Blog</a></li>
-        <li><a href="../classes/">Classes</a></li>
-        <li><a href="../legacy/">Legacy</a></li>
+        <li><a href="/classes/">Classes</a></li>
+        <li><a href="/legacy/">Legacy</a></li>
         <li><a class="workshop-highlight" href="../workshops/">Workshops</a></li>
         <li><a class="store-button" href="../store/">Store</a></li>
       </ul>
