--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="keywords" content="tai chi, tai ji, taiji, Alex Dong, Dong Da De, NYC, nyc, new york">
     <meta name="keywords" content="demnark, spain, italy, uk, greece, brazil">
-    <title>Alex Dong Taiji</title>
+    <title>Alex Dong Tai Chi</title>
   </head>
 
 <body>
