--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <div class="homepage-header-text">
       <h1>Master Alex Dong</h1>
-      <h2>Fourth Generation Taichi Chuan Master</h2>
+      <h2>Fourth Generation Tai Chi Chuan Master</h2>
     </div>
   </header>
 
