--- a/classes/vejle/index.html
+++ b/classes/vejle/index.html
@@ -27,7 +27,7 @@
 <section class="history-classes">
 <div class="history-container classes-container">
 <div class="history-container classes-container instructor-container">
-<a href="#klaus-popup" class="animated_popup"><h1>Instructor: Gordon Joly</h1></a>
+<a href="#klaus-popup" class="animated_popup"><h1>Instructor: Klaus Kotschenreuther</h1></a>
 <div id="klaus-popup" class="image-popup" style="display:none">
 <h3>Klaus Kotschenreuther</h3>
 <img src="http://www.taichispirit.org.uk/images/klaus.jpg"></img>
