--- a/classes/prague/index.html
+++ b/classes/prague/index.html
@@ -76,7 +76,17 @@ students. I am happy to have been granted this opportunity.
 </p>
 </div>
 
-<p>Class schedule </p>
+<p>Class schedule</p>
+<ul>
+<li>Location: Centrum cviceni pro zdravi, Praha - Zbraslav</li>
+<li>Class: Mondays from 18:30 to 20:00</li>
+<li> Location: TJ Victoria Vestec, Vestec u Prahy</li>
+<li>Class: Tuesdays from 18:30 to 20:00</li>
+<li>Email: <a href="mailto:sarka.rajtorova@gmail.com">sarka.rajtorova@gmail.com</a></li>
+<li> Website: <a href="http://www.kondicestyl.cz/" target="_blank">www.kondicestyl.cz</a>
+</ul>
+
+
 </div>
 </section>
 <footer>
