--- a/classes/thurstoncounty/index.html
+++ b/classes/thurstoncounty/index.html
@@ -49,7 +49,13 @@
     </div>
 
     <div class="history-container classes-container instructor-container">
-        <h1>Instructor: David Graham</h1>
+       
+ <a href="#davidgraham-popup" class="animated_popup"> <h1>Instructor: David Graham</h1></a>
+        <div id="davidgraham-popup" class="image-popup" style="display:none">
+          <img src="../../assets/images/instructor/andyholmes.jpg">
+          <h3>David Graham</h3>
+
+<p> I was introduced to taiji in 1976 and have had an interest in martial arts since then. I started attending classes in the Olympia area in 1996. Since that time I have met many great instructors and students of TCC. I've continued my studies of TCC by going to regular weekly classes, and attending camps in my area and at least once a year out of state. I have been back up teacher for my instructor, Andy Holmes, since 2000 and started my own class in the fall of 2004. </p>
         <p>Lacey Parks and Recreation Center
         <br>Olympia, Washington
         <br>Tuesday Night 5:45 PM-7:00 PM
