--- a/classes/thurstoncounty/index.html
+++ b/classes/thurstoncounty/index.html
@@ -63,7 +63,7 @@
         <br>Monday Night 5:30 PM-7:00 PM</p>
         <p>To Register: 360-491-0857
         <br>Other Info: 360 951 2230
-        <br>Email: <a href="dlgbay88@hotmail.com" target="_blank">dlgbay88@hotmail.com</a></p>
+        <br>Email: <a href="mailto:dlgbay88@hotmail.com>dlgbay88@hotmail.com</a></p>
    
 
   </section>
