--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -34,7 +34,7 @@
     <div class="history-container classes-container">
       <a href="#lydiat-popup" class="animated_popup"><h1>Instructor: Lydia Tillianaki</h1></a>
         <div id="lydiat-popup" class="image-popup" style="display:none">
-          <img src="../../assets/images/instructor/lydiatillianaki.jpg">
+          <img src="http://www.taichispirit.org.uk/images/lydia.jpg">
           <h3>Lydia Tillianaki</h3>
           <p>Lydia Tillianaki was born in Athens and has started her training in Yang style tai chi chuan in 1984 in Belgium where she originally went for music studies. After two years she moved to London to continue teach with her formal tai chi teacher San gee tam. She studied with him for about 10 years. In those years she taught classes as an assistant also her own in various locations in London and countryside.</p>
 
