--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -36,7 +36,7 @@
         <div id="lydiat-popup" class="image-popup" style="display:none">
           <img src="http://www.taichispirit.org.uk/images/lydia.jpg">
           <h3>Lydia Tillianaki</h3>
-          <p>Lydia Tillianaki was born in Athens and has started her training in Yang style tai chi chuan in 1984 in Belgium where she originally went for music studies. After two years she moved to London to continue teach with her formal tai chi teacher San gee tam. She studied with him for about 10 years. In those years she taught classes as an assistant also her own in various locations in London and countryside.</p>
+          <p>Lydia Tillianaki was born in Athens and has started her training in Yang style tai chi chuan in 1984 in Belgium where she originally went for music studies. After two years she moved to London to continue teach with her formal tai chi teacher, San Gee Tam. She studied with him for about 10 years. In those years she taught classes as an assistant also her own in various locations in London and countryside.</p>
 
           <p>She moved back to Greece around 1993 and started teaching a few classes in Athens . Tai Chi was not well known at that time in Greece. Athens had only very few teachers and other cities in Greece had almost none.</p>
 
